--- a/nounous-web/src/main/webapp/pages/admin/compte/liste.xhtml
+++ b/nounous-web/src/main/webapp/pages/admin/compte/liste.xhtml
@@ -4,7 +4,10 @@
      xmlns:f="http://java.sun.com/jsf/core"
      xmlns:ui="http://java.sun.com/jsf/facelets"
      template="/template/page-standard.xhtml" >
-
+	<ui:define name="head">
+		<h:link outcome="a_accueil" value="Accueil" />
+		<h:link outcome="comptes" value="Compte" />
+	</ui:define>
      <ui:define name="titre">Liste des comptes</ui:define>
 
     <ui:define name="contenu">
