--- a/nounous-web/src/main/webapp/pages/nounou/planning/index.xhtml
+++ b/nounous-web/src/main/webapp/pages/nounou/planning/index.xhtml
@@ -16,7 +16,7 @@
      <ui:define name="titre">Nounou</ui:define>
 
     <ui:define name="contenu">
-		<h1>Planing</h1>
+		<h1>Planning</h1>
 
 	</ui:define>
 
