--- a/nounous-web/src/main/webapp/pages/nounou/suiviGarde/index.xhtml
+++ b/nounous-web/src/main/webapp/pages/nounou/suiviGarde/index.xhtml
@@ -3,20 +3,20 @@
 	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets">>
+	xmlns:ui="http://java.sun.com/jsf/facelets">
 
 	<ui:define name="head">
 		<h:link outcome="n_accueil" value="Accueil" />
-		<h:link outcome="n_contrat" value="Contrats" />
-		<h:link outcome="n_garde" value="Garde" />
-		<h:link outcome="n_stat" value="Statistique" />
-		<h:link outcome="n_planing" value="Planing" />
-
+		<h:link outcome="n_contrat" value="Nouveau contrat" />
+		<h:link outcome="n_garde" value="Mes contrats" />
+		<h:link outcome="n_stat" value="Mon compte" />
+		<h:link outcome="n_planning" value="Planning" />
 	</ui:define>
-	<ui:define name="titre">Nounou</ui:define>
+	
+	<ui:define name="titre">Nounou - Gardes</ui:define>
 
 	<ui:define name="contenu">
-		<h3>Suivi</h3>
+		<h3>Mes gardes</h3>
 		<h:form>
 			<h:dataTable styleClass="liste" value="#{modelGarder.liste}"
 				var="item" rowClasses="impair, pair"
