Mise à jour gardes

--- a/nounous-web/src/main/webapp/pages/admin/compte/formulaire.xhtml
+++ b/nounous-web/src/main/webapp/pages/admin/compte/formulaire.xhtml
@@ -3,7 +3,7 @@
      xmlns="http://www.w3.org/1999/xhtml"
      xmlns:h="http://java.sun.com/jsf/html"
      xmlns:f="http://java.sun.com/jsf/core"
-     xmlns:ui="http://java.sun.com/jsf/facelets">>
+     xmlns:ui="http://java.sun.com/jsf/facelets">
 
 	 <f:metadata>
 		 <f:viewParam name="id" value="#{modelCompte.courant.id}" />
